--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/fonts/fonts.scss";
+@import "@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection/assets/fonts/icons.scss";
+
+$font-family-path: "@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection";
+$icons-path: "@npm-bbta/bbog-dig-dt-sherpa-lib/dist/collection";
