--- a/src/app/bank-virtual/dashboard/dashboard.component.html
+++ b/src/app/bank-virtual/dashboard/dashboard.component.html
@@ -1,2 +1,17 @@
-<sp-ml-dashboard-card items-cards='[{"type":"CA","name":"Cuenta de Ahorros","accountNumber":"0087392084","icon":"ico-cuenta-de-ahorros","isOpen":true,"creditLimit":null,"availCredit":null,"isInactive":false,"points":null,"logo":null,"balance":{"label":"Saldo Disponible","integerPart":"30.000","decimalPart":"10"},"key":null,"labelButtom":null,"tagType":null,"tagLabel":null,"payment":null,"itemOptions":[{"icon":"ico-accounting-document","label":"Ver detalle","value":"opt2"},{"icon":"ico-money","label":"Realizar pago","value":"opt2"},{"icon":"ico-amt-bill","label":"Realizar un avance","value":"opt2"},{"icon":"ico-download","label":"Descargar extractos y documentos","value":"opt2"},{"icon":"ico-search","label":"Buscar todos los movimientos","value":"opt2"}]}]'></sp-ml-dashboard-card>
-<sp-ml-dashboard-card items-cards='[{"type":"CA","name":"Cuenta de Ahorros","accountNumber":"0087392084","icon":"ico-cuenta-de-ahorros","isOpen":true,"creditLimit":null,"availCredit":null,"isInactive":false,"points":null,"logo":null,"balance":{"label":"Saldo Disponible","integerPart":"30.000","decimalPart":"10"},"key":null,"labelButtom":null,"tagType":null,"tagLabel":null,"payment":null,"itemOptions":[{"icon":"ico-accounting-document","label":"Ver detalle","value":"opt2"},{"icon":"ico-money","label":"Realizar pago","value":"opt2"},{"icon":"ico-amt-bill","label":"Realizar un avance","value":"opt2"},{"icon":"ico-download","label":"Descargar extractos y documentos","value":"opt2"},{"icon":"ico-search","label":"Buscar todos los movimientos","value":"opt2"}]}]'></sp-ml-dashboard-card>
+<div>
+  <img src="./../assets/market-place.png" width="100%" onclick="" />
+  <span className="ico-close"></span>
+</div>
+
+<sp-ml-dashboard-card
+  items-cards='[{"type":"CA","name":"Cuenta de Ahorros","accountNumber":"0087392084","icon":"ico-cuenta-de-ahorros","isOpen":true,"creditLimit":null,"availCredit":null,"isInactive":false,"points":null,"logo":null,"balance":{"label":"Saldo Disponible","integerPart":"1.800.000,00","decimalPart":"10"},"key":null,"labelButtom":null,"tagType":null,"tagLabel":null,"payment":null,"itemOptions":[{"icon":"ico-accounting-document","label":"Ver detalle","value":"opt2"},{"icon":"ico-money","label":"Realizar pago","value":"opt2"},{"icon":"ico-amt-bill","label":"Realizar un avance","value":"opt2"},{"icon":"ico-download","label":"Descargar extractos y documentos","value":"opt2"},{"icon":"ico-search","label":"Buscar todos los movimientos","value":"opt2"}]}]'
+></sp-ml-dashboard-card>
+
+<sp-ml-dashboard-card
+  items-cards='[{"type":"TC","name":"Tarjeta de crédito","accountNumber":"····2084","icon":"ico-clasica-visa","isOpen":true,"creditLimit":"100000","availCredit":"30000","isInactive":false,"points":null,"logo":null,"balance":{"label":"Saldo Disponible","integerPart":"30.000","decimalPart":"10"},"key":null,"labelButtom":null,"tagType":null,"tagLabel":null,"payment":{"amountLabel":"Pago mínimo","buttonLabel":"Pagar","dateLabel":"Fecha pago","date":"20/11/2021","valueIntegerPart":"364.321","valueDecimalPart":"15"},"itemOptions":[{"icon":"ico-accounting-document","label":"Ver detalle","value":"opt2"},{"icon":"ico-money","label":"Realizar pago","value":"opt2"},{"icon":"ico-amt-bill","label":"Realizar un avance","value":"opt2"},{"icon":"ico-download","label":"Descargar extractos y documentos","value":"opt2"},{"icon":"ico-search","label":"Buscar todos los movimientos","value":"opt2"}]}]'
+></sp-ml-dashboard-card>
+
+<sp-ml-sidebar
+  items-sidebar='[{ "icon":"ico-home", "label": "Product"},{ "icon":"ico-home", "label": "Label 2"},{ "icon":"ico-home", "label": "Label 3"},{ "icon":"ico-home", "label": "Label 4"}]'
+>
+</sp-ml-sidebar>
