--- a/src/app/bank-virtual/simulator/simulator.component.html
+++ b/src/app/bank-virtual/simulator/simulator.component.html
@@ -1,2 +1,5 @@
-<p>simulator works!</p>
-<p>djsjd</p>
+<sp-tp-progress title-label="Simula tu CDT" step-label="Paso 1 de 6" subtitle="Completa la información para realizar la simulación de tu CDT" progress-percentage="20">
+    <div class="blanco">
+
+    </div>
+</sp-tp-progress>
