--- a/src/app/bank-virtual/dashboard/dashboard.component.html
+++ b/src/app/bank-virtual/dashboard/dashboard.component.html
@@ -1,5 +1,10 @@
 <div>
-  <img src="./../assets/market-place.png" width="100%" onclick="" />
+    <img
+            src="./../assets/market-place.png"
+            width="100%"
+            (click)="test()"
+            alt="Market Place"
+    >
   <span className="ico-close"></span>
 </div>
 
