--- a/src/app/bank-virtual/dashboard/dashboard.component.html
+++ b/src/app/bank-virtual/dashboard/dashboard.component.html
@@ -17,6 +17,6 @@
 ></sp-ml-dashboard-card>
 
 <sp-ml-sidebar
-  items-sidebar='[{ "icon":"ico-home", "label": "Product"},{ "icon":"ico-home", "label": "Label 2"},{ "icon":"ico-home", "label": "Label 3"},{ "icon":"ico-home", "label": "Label 4"}]'
+  items-sidebar='[{ "icon":"ico-home", "label": "Productos"},{ "icon":"ico-pay", "label": "Pagar"},{ "icon":"ico-transfers", "label": "transferir"},{ "icon":"ico-documents", "label": "Documentos"},{ "icon":"ico-menu", "label": "menu"}]'
 >
 </sp-ml-sidebar>
