--- a/src/app/bank-virtual/dashboard/dashboard.component.html
+++ b/src/app/bank-virtual/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<sp-ml-secondtabs position="left" proportional-width=false tabs='[{"id":"1","title":"Tu Banca Virtual","disabled":false,"notification":false},{"id":"2","title":"Exclusivo para ti","disabled":false,"notification":false}]'></sp-ml-secondtabs>
 <div>
     <img
             src="./../assets/market-place.png"
