--- a/src/app/bank-virtual/summary/summary.component.html
+++ b/src/app/bank-virtual/summary/summary.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <sp-tp-progress
   title-label="Así queda la simulación de tu CDT"
   step-label="Paso 1 de 6"
@@ -7,13 +8,13 @@
   <div class="blanco">
     <div>Tu simulacion</div>
     <sp-ml-card-list
-      values-card-list='[{"title": "Tu CDT a 90 días","desc": "Tasa establecida según el monto y el plazo: 9.70% E.A","textButton":"Abrir CDT","typetag": "INFO", "tag": "Tu simulación","values": [{ "label": "Label 1","amount": "00,00","isAmount":"true"}]}]'
+      values-card-list='[{"title": "Tu CDT a 90 días","desc": "Tasa establecida según el monto y el plazo: 9.70% E.A","textButton":"Abrir CDT","typetag": "INFO", "tag": "Tu simulación","values": [{ "label": "Monto ingresado","amount": "$500.000,00"}, { "label": "Recibirás","amount": "$514.814,00"}]}]'
     ></sp-ml-card-list>
 
     <div>Sigue nuestras recomendaciones</div>
     <sp-ml-card-list
       hidden-arrow
-      values-card-list='[{"title": "Tu CDT a 120 días","avatar":{"text":"Miguel Rojas"},"desc": "Tasa establecida según el monto y el plazo: 9.70% E.A", "desc2": "Tu CDT vencerá el 20/11/2024","values": [{ "label": "Monto ingresado","amount": "$500.000"}, { "label": "Recibirás","amount": "$522.814"}]},{"title": "Title","avatar":{"text":"Miguel Rojas"},"desc": "Description 1", "desc2": "Description 2","values": [{ "label": "Label 1","amount": "00,00"}, { "label": "Label 2","amount": "00,00"}]}]'
+      values-card-list='[{"title": "Tu CDT a 120 días","avatar":{"icon":"ico-cdts", "color":"white"},"desc": "Tasa establecida según el monto y el plazo: 9.70% E.A", "textButton":"Abrir CDT", "typeButton":"secondary", "desc2": "Tu CDT vencerá el 20/11/2024","values": [{ "label": "Monto ingresado","amount": "$500.000"}, { "label": "Recibirás","amount": "$522.814"}]},{"title": "Tu CDT a 180 días","avatar":{"icon":"ico-cdts", "color":"white"},"desc": "Tasa establecida según el monto y el plazo: 9.70% E.A", "textButton":"Abrir CDT","typeButton":"secondary", "desc2": "Tu CDT vencerá el 20/12/2024","values": [{ "label": "Monto ingresado","amount": "$500.000,00"}, { "label": "Recibirás","amount": "$533.648,00"}]}]'
     ></sp-ml-card-list>
   </div>
 </sp-tp-progress>
