--- a/src/app/bank-virtual/simulator/simulator.component.html
+++ b/src/app/bank-virtual/simulator/simulator.component.html
@@ -9,6 +9,6 @@
         <sp-ml-chip-selector
                *ngIf="mostrar" [selectionValues]='opcion'></sp-ml-chip-selector>
 
-        <button (clickButton)= "continue($event)" class='sp-at-btn sp-at-btn--primary sp-at-btn--lg '  >Continuar</button>
+        <button (click)="continue($event)" class='sp-at-btn sp-at-btn--primary sp-at-btn--lg '  >Continuar</button>
     </div>
 </sp-tp-progress>
