--- a/src/app/bank-virtual/summary/summary.component.html
+++ b/src/app/bank-virtual/summary/summary.component.html
@@ -13,7 +13,8 @@
     <div>Sigue nuestras recomendaciones</div>
     <sp-ml-card-list
       hidden-arrow
-      values-card-list='[{"title": "Tu CDT a 120 días","avatar":{"text":"Miguel Rojas"},"desc": "Tasa establecida según el monto y el plazo: 9.70% E.A", "desc2": "Tu CDT vencerá el 20/11/2024","values": [{ "label": "Monto ingresado","amount": "$500.000"}, { "label": "Recibirás","amount": "$522.814"}]},{"title": "Title","avatar":{"text":"Miguel Rojas"},"desc": "Description 1", "desc2": "Description 2","values": [{ "label": "Label 1","amount": "00,00"}, { "label": "Label 2","amount": "00,00"}]}]'
+      values-card-list='[
+      {"title": "Tu CDT a 120 días","avatar":{"text":"Miguel Rojas"},"desc": "Tasa establecida según el monto y el plazo: 9.70% E.A", "desc2": "Tu CDT vencerá el 20/11/2024","values": [{ "label": "Monto ingresado","amount": "$500.000"}, { "label": "Recibirás","amount": "$522.814"}]}]'
     ></sp-ml-card-list>
   </div>
 </sp-tp-progress>
